--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "systray"]
 	path = modules/systray
-	url = https://github.com/Infinidat/infi.systray
+	url = https://github.com/andreabak/systray
